tests/ui/consts/promoted_const_call.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:9:26
   |
LL |     let _: &'static _ = &id(&Panic);
   |            ----------    ^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | };
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:9:30
   |
LL |     let _: &'static _ = &id(&Panic);
   |            ----------        ^^^^^ - temporary value is freed at the end of this statement
   |            |                 |
   |            |                 creates a temporary value which is freed while still in use
   |            type annotation requires that borrow lasts for `'static`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:15:26
   |
LL |     let _: &'static _ = &id(&Panic);
   |            ----------    ^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:15:30
   |
LL |     let _: &'static _ = &id(&Panic);
   |            ----------        ^^^^^ - temporary value is freed at the end of this statement
   |            |                 |
   |            |                 creates a temporary value which is freed while still in use
   |            type annotation requires that borrow lasts for `'static`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:18:26
   |
LL |     let _: &'static _ = &&(Panic, 0).1;
   |            ----------    ^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_call.rs:18:27
   |
LL |     let _: &'static _ = &&(Panic, 0).1;
   |            ----------     ^^^^^^^^^^ creates a temporary value which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0716`.
